--- a/pg_hba.conf
+++ b/pg_hba.conf
@@ -1,2 +1,13 @@
-# pg_hba.conf
-host    db             postgres       0.0.0.0/0       md5
+# TYPE  DATABASE        USER            ADDRESS                 METHOD
+
+# "local" is for Unix domain socket connections only
+local   all             all                                     trust
+
+# IPv4 local connections:
+host    all             all             127.0.0.1/32            md5
+
+# IPv6 local connections:
+host    all             all             ::1/128                 md5
+
+# Allow connections from any IP address to the 'db' database using md5 authentication
+host    db              postgres        0.0.0.0/0               md5
