--- a/postgresql.conf
+++ b/postgresql.conf
@@ -1,2 +1,20 @@
-# postgresql.conf
+# PostgreSQL configuration file
+
+data_directory = '/var/lib/postgresql/14/main'
+hba_file = '/etc/postgresql/14/main/pg_hba.conf'
+ident_file = '/etc/postgresql/14/main/pg_ident.conf'
+
+external_pid_file = '/var/run/postgresql/14-main.pid'
+
 listen_addresses = '*'
+port = 5432
+max_connections = 100
+
+ssl = on
+ssl_cert_file = '/etc/ssl/certs/ssl-cert-snakeoil.pem'
+ssl_key_file = '/etc/ssl/private/ssl-cert-snakeoil.key'
+
+shared_buffers = 128MB
+dynamic_shared_memory_type = posix
+
+# Other settings as needed...
